--- a/explore.html
+++ b/explore.html
@@ -51,31 +51,31 @@
             <p>STINQ CLOTHES D-1.G</p>
         </div>
         <div class="column">
-            <a href="clothes.html">
+            <a href="clothes2.html">
                 <img src="assets/CLOTHES2.png">
             </a>
             <p>STINQ CLOTHES D-2.B</p>
         </div>
         <div class="column">
-            <a href="clothes.html">
+            <a href="clothes3.html">
                 <img src="assets/CLOTHES3.png">
             </a>
             <p>STINQ CLOTHES D-3.L.B</p>
         </div>
         <div class="column">
-            <a href="clothes.html">
+            <a href="clothes4.html">
                 <img src="assets/CLOTHES4.png">
             </a>
             <p>STINQ CLOTHES D-4.L.R</p>
         </div>
         <div class="column">
-            <a href="clothes.html">
+            <a href="clothes5.html">
                 <img src="assets/CLOTHES5.png">
             </a>
             <p>STINQ CLOTHES D-5.D.B</p>
         </div>
         <div class="column">
-            <a href="clothes.html">
+            <a href="clothes6.html">
                 <img src="assets/CLOTHES6.png">
             </a>
             <p>STINQ CLOTHES D-6.D.W</p>
