--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
         </ul>
     </div>
 </footer>
+
+<script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </header>
 </body>
 </html>
